--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="jumbotron">
 
       <h1>Quote Book</h1>
-<p ng-repeat="quote in getQuotes | filter: filterText">
+<p ng-repeat="quote in getQuotes | filter: filterText track by $index">
   <span class="text">{{quote.text}}</span>
   <span class="author"> -- {{quote.author}}</span>
   <button ng-click="deleteMe(quote.text)">Delete</button>
@@ -36,6 +36,7 @@
 </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-cookies.js"></script>
   <script src="./js/app.js"></script>
   <script src="./js/mainCtrl.js"></script>
   <script src="./js/dataService.js"></script>
