--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Quotebook</title>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="./style.css">
   </head>
   <body ng-controller="mainCtrl">
@@ -13,26 +15,29 @@
 
       <h1>Quote Book</h1>
 <p ng-repeat="quote in getQuotes | filter: filterText track by $index">
-  <span class="text">{{quote.text}}</span>
-  <span class="author"> -- {{quote.author}}</span>
-  <button ng-click="deleteMe(quote.text)">Delete</button>
+  <span class="text animated flash">{{quote.text}}</span>
+  <span class="author animated flash"> -- {{quote.author}}</span>
+  <button class="btn btn-danger animated rubberBand" ng-click="deleteMe(quote.text)">Delete</button>
 </p>
+
 
 <form>
 
 <label>Add a new quote text: </label>
-<input type="text" placeholder="Add new quote!" ng-model="newQuoteText"></input>
+<input class="shorterbox" type="text" placeholder="Add new quote!" ng-model="newQuoteText"></input>
 
 <label>Add a new quote author: </label>
-<input type="text" placeholder="Quotes author!" ng-model="newQuoteAuthor"></input>
-<button ng-click="addQuote()">Add Quote</button>
+<input class="shorterbox" type="text" placeholder="Quotes author!" ng-model="newQuoteAuthor"></input>
+<button class="btn btn-success" ng-click="addQuote()">Add Quote</button>
 </form>
+
 
 <form>
 </br>
 <label>Filter: </label>
-<input type="text" placeholder="Filter Quotes!" ng-model="filterText">
+<input class="form-control" type="text" placeholder="Filter Quotes!" ng-model="filterText">
 </form>
+
 </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
