--- a/index.html
+++ b/index.html
@@ -2,46 +2,30 @@
 <html ng-app="quoteBook">
   <head>
     <meta charset="utf-8">
-    <title>Quotebook</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-      <link rel="stylesheet" href="animate.css">
+    <title>The Next QuoteBook</title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body ng-controller="mainCtrl">
+  <p ng-repeat="quote in quotes | filter: filterText track by $index">
+    <span>{{quote.text}}</span>
+    <span>--{{quote.author}}</span>
+    <button ng-click="deleteQuote(quote.text)">Delete</button>
+  </p>
+  <form>
+    <label> Add the quote: </label>
+    <input ng-model="addQuote" type="text" placeholder="Enter quote here"></input>
 
-    <div class="container">
-    <div class="jumbotron">
+    <label> Add the author: </label>
+    <input ng-model="addAuthor" type="text" placeholder="Enter author here"></input>
 
-      <h1>Quote Book</h1>
-<p class="animated zoomIn" ng-repeat="quote in getQuotes | filter: filterText track by $index">
-  <span class="text">{{quote.text}}</span>
-  <span class="author"> -- {{quote.author}}</span>
-  <button class="btn btn-danger" ng-click="deleteMe(quote.text)">Delete</button>
-</p>
-
-
-<form>
-
-<label>Add a new quote text: </label>
-<input class="shorterbox" type="text" placeholder="Add new quote!" ng-model="newQuoteText"></input>
-
-<label>Add a new quote author: </label>
-<input class="shorterbox" type="text" placeholder="Quotes author!" ng-model="newQuoteAuthor"></input>
-<button class="btn btn-success" ng-click="addQuote()">Add Quote</button>
-</form>
-
-
-<form>
+    <button ng-click="addDemQuotes(newQuote)">Add</button>
+  </form>
 </br>
-<label>Filter: </label>
-<input class="form-control" type="text" placeholder="Filter Quotes!" ng-model="filterText">
-</form>
-
-</div>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-cookies.js"></script>
+  <form>
+  <label> Search Quote: </label>
+  <input type="text" ng-model="filterText"></input>
+  </form>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
   <script src="./js/app.js"></script>
   <script src="./js/mainCtrl.js"></script>
   <script src="./js/dataService.js"></script>
